--- a/index.html
+++ b/index.html
@@ -1,16 +1,113 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Audio Graph</title>
+    <style>
+      html {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+      }
+
+      body {
+        border-radius: 1rem;
+        overflow: hidden;
+        background-color: white;
+      }
+
+      #waveform ::part(cursor):before {
+        content: "";
+      }
+
+      #waveform {
+        background: #e6f0ff;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        overflow: hidden;
+      }
+
+      #waveform ::part(region) {
+        font-family: fantasy;
+      }
+
+      .controls {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: start;
+        justify-content: space-between;
+        min-height: 50px;
+      }
+
+      button#pause,
+      button#play {
+        margin-top: -30px;
+        margin-right: 10px;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        outline: none;
+        background: white;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
+      }
+
+      #time {
+        font-size: 12px;
+        margin-top: 10px;
+        margin-left: 10px;
+      }
+
+      .hide {
+        display: none !important;
+      }
+    </style>
   </head>
   <body>
     <div id="waveform"></div>
-    <button id="play">Play</button>
-    <button id="pause">Pause</button>
-    <div id="time"></div>
+    <div class="controls">
+      <button id="pause" class="hide">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-circle-pause"
+        >
+          <circle cx="12" cy="12" r="10" />
+          <line x1="10" x2="10" y1="15" y2="9" />
+          <line x1="14" x2="14" y1="15" y2="9" />
+        </svg>
+      </button>
+      <button id="play">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-play"
+        >
+          <polygon points="6 3 20 12 6 21 6 3" />
+        </svg>
+      </button>
+      <div id="time">00 : 00</div>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
