--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         outline: none;
         background: white;
         box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
+        position: relative;
+        z-index: 99999;
       }
 
       #time {
@@ -65,6 +67,15 @@
 
       .hide {
         display: none !important;
+      }
+
+      ::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+      }
+
+      ::-webkit-scrollbar-track {
+        background: transparent; /* You can set background color if needed */
       }
     </style>
   </head>
